--- a/ginnapp/app/src/main/AndroidManifest.xml
+++ b/ginnapp/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".DogWalkingActivity" />
         <activity android:name=".StatisticsActivity" />
+        <activity android:name=".UserDetailsActivity" />
     </application>
 
 </manifest>
