--- a/ginnapp/app/src/main/AndroidManifest.xml
+++ b/ginnapp/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".DogWalkingActivity" />
         <activity android:name=".StatisticsActivity" />
         <activity android:name=".UserDetailsActivity" />
+        <activity android:name=".BarChartActivity" />
     </application>
 
 </manifest>
